--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,8 +39,6 @@
 
     <div class="map-container" id="map-container">
         <img src="PlantaIFC.png" alt="Map" class="map-image" id="map">
-        <div class="marker" style="top: 20%; left: 30%;" title="Location 1"></div>
-        <div class="marker" style="top: 60%; left: 70%;" title="Location 2"></div>
     </div>
 
     <script src="script.js"></script>
