graph logic & aStar

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     <div class="map-container" id="map-container">
         <img src="PlantaIFC.png" alt="Map" class="map-image" id="map">
+        <svg id="lines" style="position: absolute; top: 0; left: 0; pointer-events: none;"></svg>
     </div>
 
     <script src="script.js"></script>
